--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
     </table>
   </div>
 
-
+<div id="fontfocus">
+    <p id="name">Hi I'm<span id="man">Manish.</span> <p id="destroy">I like to <del id="delele">Destroy</del><span id="create">Create</span> stuff.</p></p>
+      
+  </div>
 
 
 
