--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body style="background-image:url(images/background-img.jpg); background-attachment:fluid; background-repeat: no-repeat; background-size: cover;">
+<body>
 
   <!-- Script of CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
