--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <div id="fontfocus">
     <p id="name">Hi I'm<span id="man">Manish.</span> <p id="destroy">I like to <del id="delele">Destroy</del><span id="create">Create</span> stuff.</p></p>
-      
+      <img src="Multitasking.png" alt="multitasking image" />
   </div>
 
 
