--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
     </table>
   </div>
 
-<div id="fontfocus">
-    <p id="name">Hi I'm<span id="man">Manish.</span> <p id="destroy">I like to <del id="delele">Destroy</del><span id="create">Create</span> stuff.</p></p>
-      <img src="Imagesicon.png" alt="multitasking image" style="align-item:end; height:300px; width:500px; margin-top:60px;">
+<span id="text">
+    <p id="name">Hi I'm<span id="man">Manish.</span> <p id="destroy">I like to <del id="delele">Destroy</del><span id="create">Create</span> stuff.</p></p>  
+  </span>
   </div>
-
+  <div id="fontimage">
+     <img id="bgimage" src="images/Multitasking-removebg.png">
+  </div>
 
 
 </body>
