--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="portfolio, Manish, Manishkushwaha, Manishkushwahaportfolio">
+    <meta name="description" content="Welcome, This is my portfolio...">
+    <meta name="author" content="Manish Kushwaha">
   <title>Home | Manish</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="clock.js"></script>
   <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styleman.css">
-
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </head>
 
 <body style="background-image: url('images/pink purple.png')">
@@ -65,23 +68,31 @@
     </nav>
   </nav>
 <!-- CLOCK OF BODY PAGE -->
-  <div class="container-fluid justify-content-end">
-    <table class="table table-dark table-hover">
-      <div
-        style="text-align: end; color: antiquewhite; font-size: large; font-style:oblique; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-        id="clock">00:00:00</div>
-    </table>
+    <div class="welcome-area" id="welcome">
+    <!-- CLOCK OF BODY PAGE -->
+    <div class="container-fluid justify-content-end">
+      <table class="table table-dark table-hover">
+        <div id="clock">00:00:00</div>
+      </table>
+    </div>
+    <div class="header-text">
+      <div class="container">
+        <div class="row">
+          <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
+            data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+            <span id="text">
+              <p id="name">Hi I'm<span id="man">Manish.</span>
+              <p id="destroy">I like to <del id="delele">Destroy</del><span id="create">Create</span> stuff.</p>
+              </p>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="fontimage">
+      <img id="bgimage" src="images/Multitasking-removebg.png">
+    </div>
   </div>
-
-<span id="text">
-    <p id="name">Hi I'm<span id="man">Manish.</span> <p id="destroy">I like to <del id="delele">Destroy</del><span id="create">Create</span> stuff.</p></p>  
-  </span>
-  </div>
-  <div id="fontimage">
-     <img id="bgimage" src="images/Multitasking-removebg.png">
-  </div>
-
-
 </body>
 
 </html>
