--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </head>
 
-<body style="background-image: url('images/pink purple.png')">
+<body>
 
   <!-- Script of CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
